# simple-bench

./: .gitignore  Cargo.toml  README.md  bench.toml.template  plan.md
src/: account.rs  config.rs  erc20_bytecode.txt  main.rs  monitor.rs  rpc.rs  stats.rs  tx.rs
