[package]
name = "simple_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "2.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
env_logger = "0.11"
log = "0.4"
hex = "0.4"
